# binja-webdisassembly

./: CLAUDE.md  example_wasm.js
crates/binja-wasm/: Cargo.toml
crates/binja-wasm/src/: analysis.rs  arch.rs  decode.rs  lib.rs  view.rs  wasm.rs
crates/example-wasm/: Cargo.toml
crates/example-wasm/src/: lib.rs
crates/wasm-decompile/: Cargo.toml
crates/wasm-decompile/src/: emit_js.rs  ir.rs  lib.rs  lift.rs  main.rs
crates/wasm-decompile/src/cfg/: build.rs  dominators.rs  loops.rs  mod.rs
crates/wasm-decompile/src/passes/: control_flow.rs  mem_resolve.rs  mod.rs  simplify.rs  type_infer.rs  unblockify.rs
crates/wasm-decompile/src/passes/go/: asyncify.rs  defer_frame.rs  mod.rs  string.rs
crates/wasm-decompile/src/passes/stackifier/: emit.rs  mod.rs  transform.rs
re/: example_wasm.disasm  example_wasm.wat
re/vercel/: challenge.js
tests/: .gitignore  example_wasm_no_passes.js  exotic.wat  test.js
tests/vercel/: challenge.js  challenge.v2.dcmp  challenge.v2.wasm  challenge_decompiled.js  challenge_original.js  challenge_wasm.js  challenge_wasm_no_defer.js  challenge_wasm_no_passes.js  challenge_wasm_passes.js  package-lock.json  package.json  proxy.js
