[package]
name = "wasm-decompile"
version = "0.1.0"
edition = "2021"
description = "WASM to JavaScript transpiler with multi-pass architecture"

[dependencies]
wasmparser = "0.225"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"

[dev-dependencies]
pretty_assertions = "1.4"
